<resources>
    <string name="app_name">Car History</string>
    <string name="create_account">Don\'t have an account ?\nCreate Now!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_welcome_message">Welcome To Car History! \nCars need your care too</string>
    <string name="empty_field">Should not be empty</string>
    <string name="cancel">Cancel</string>
    <string name="no_match">Password is not the same</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="info_logout">Do you really want to leave this awesome app? (hope you just want to switch accounts)</string>
    <string name="error_register">Error while creating your account, please try again</string>
    <string name="error_update_profile">Error while updating your profile, please try again</string>
    <string name="error_update_password">Error while updating your password, please try again</string>
    <string name="success_register">Your account has been created, please log in.</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="add_new">Add New</string>
    <string name="home">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="no_spaces">must not contain spaces</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_create">Create</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">Loading …</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="edit_password">Edit password</string>
    <string name="test">Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
         \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
         \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
         \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
         \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
         \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java
           \n
        Open your Android Studio &amp; create a new Project. For Kotlin support, check the checkbox of Kotlin support.  Now give name whatever you like and We’ll keep all the things by default and clicked finish.

If you have any difficulty in creating the app you can have a look into Develop android apps using java



</string>
    <string name="update">Update</string>


    <string name="skip">Skip</string>
    <string name="choose_type">Choose type</string>
    <string name="where">Where ?</string>
    <string name="what_have_u_done">what have u done ?</string>
    <string name="created_at">Created at:</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register_info_title">Create a new account \n \n Enter your info</string>
    <string name="register_password_title">Create a new account \n \n Enter password</string>
    <string name="proceed">Proceed</string>
    <string name="already_have_account">Already have an account?  \nSign in now!</string>
    <string name="password_update_success">Your password is updated successfully</string>
    <string name="password_update_no_match">Wrong password, please enter your current password.</string>
    <string name="manage_places">Manage places</string>
    <string name="mileage">Mileage</string>
    <string name="frensh">Frensh</string>
    <string name="english">English</string>


</resources>
