<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password_etx_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_etx"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_password_txv_error_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/empty_field"
        android:textColor="@color/deepRed"
        android:textSize="13sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password_etx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_etx"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_password_txv_error_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/empty_field"
        android:textColor="@color/deepRed"
        android:textSize="13sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password_etx_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_etx"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_password_txv_error_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/empty_field"
        android:textColor="@color/deepRed"
        android:textSize="13sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_password_btn_submit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_round_button"
            android:fontFamily="@font/raleway_light"
            android:text="@string/edit_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".6" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/edit_password_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/edit_password_btn_submit"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/edit_password_btn_submit"
            app:layout_constraintStart_toStartOf="@+id/edit_password_btn_submit"
            app:layout_constraintTop_toTopOf="@+id/edit_password_btn_submit"
            app:layout_constraintWidth_percent=".1" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>