<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_root_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".feature.register.PasswordFragment">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/register_img_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toTopOf="@+id/login_guide_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintStart_toStartOf="@+id/login_guide_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent=".25" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/register_txv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:text="Create a new account \n \n Enter password"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintStart_toStartOf="@+id/login_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/register_img_logo" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_etx_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_etx"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/login_guide_center"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintStart_toStartOf="@+id/login_guide_start" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_txv_error_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/deepRed"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintStart_toStartOf="@+id/register_etx_password"
        app:layout_constraintTop_toBottomOf="@+id/register_etx_password"
        tools:visibility="visible" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_etx_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_etx"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/login_txv_error_password" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_txv_error_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/deepRed"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintStart_toStartOf="@+id/login_etx_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/login_etx_confirm_password"
        tools:visibility="visible" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_round_button_grey"
        android:drawableStart="@drawable/ic_previous"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="24dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/login_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/login_txv_error_confirm_password"
        app:layout_constraintWidth_percent=".4" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_btn_submit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_round_button"
        android:fontFamily="@font/raleway_light"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/login_guide_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/register_btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/login_txv_error_confirm_password"
        app:layout_constraintWidth_percent=".4" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/register_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/register_btn_submit"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/register_btn_submit"
        app:layout_constraintStart_toStartOf="@+id/register_btn_submit"
        app:layout_constraintTop_toTopOf="@+id/register_btn_submit"
        app:layout_constraintWidth_percent=".1" />


    <android.support.constraint.Guideline
        android:id="@+id/login_guide_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <android.support.constraint.Guideline
        android:id="@+id/login_guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <android.support.constraint.Guideline
        android:id="@+id/login_guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <android.support.constraint.Guideline
        android:id="@+id/login_guide_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />


</android.support.constraint.ConstraintLayout>